--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "z-games-six-nimmt",
-  "version": "0.0.23",
+  "version": "0.0.24",
   "description": "6 nimmt! game module for tiny board games portal",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -28,7 +28,8 @@
   },
   "homepage": "https://github.com/zinovik/z-games-six-nimmt#readme",
   "devDependencies": {
-    "@types/jest": "^24.0.15",
+    "@types/jest": "^24.0.17",
+    "husky": "^3.0.2",
     "jest": "^24.8.0",
     "prettier": "^1.18.2",
     "ts-jest": "^24.0.2",
@@ -37,9 +38,14 @@
     "typescript": "^3.5.3"
   },
   "dependencies": {
-    "z-games-base-game": "0.0.21"
+    "z-games-base-game": "0.0.22"
   },
   "files": [
     "lib/**/*"
-  ]
+  ],
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run format && npm run lint && npm run test && npm run build"
+    }
+  }
 }
